--- a/src/app/collection/collection.component.scss
+++ b/src/app/collection/collection.component.scss
@@ -57,3 +57,28 @@ div ::ng-deep .mat-tab-label {
     object-fit: cover;
   }
 }
+
+#search-icon {
+  vertical-align: text-bottom;
+}
+
+input.search {
+  line-height: 1em;
+}
+
+.bibtex {
+  margin: 0px!important;
+}
+
+.bibtex:hover {
+  cursor: pointer;
+  color: mat-color($custom-theme-primary);
+}
+
+.mat-expansion-panel {
+  background-color: transparent;
+}
+
+.mat-expansion-panel-header {
+  padding-left: 0;
+}
