--- a/src/app/model/model.component.scss
+++ b/src/app/model/model.component.scss
@@ -177,6 +177,14 @@
   color: mat-color($custom-theme-accent, A700);
 }
 
+.buttonResetView {
+  top: 2em;
+  right: 10em;
+  position: absolute;
+  z-index: 1002;
+  color: mat-color($custom-theme-accent, A700);
+}
+
 
 /* Media query to increase the size of the gallery in mobile views.
    Otherwise, the gallery images are too small. */
@@ -201,4 +209,13 @@
   width: 6em;
   border-radius: 20%;
   padding: 0.5em;
+}
+
+pre.bibtex {
+  margin: 0px;
+}
+
+.bibtex:hover {
+  cursor: pointer;
+  color: mat-color($custom-theme-primary);
 }
