Start of 3d support for worlds
Signed-off-by: Nate Koenig <nate@openrobotics.org>

--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -35,7 +35,7 @@
           <div *ngIf="view3d" #fullScreen>
             <ign-sdfviewer
               class="sdfviewer"
-              [model]="model"
+              [resource]="model"
               [currentVersion]="currentVersion">
              </ign-sdfviewer>
           </div>
