--- a/src/app/cloudsim/detail/simulation.component.html
+++ b/src/app/cloudsim/detail/simulation.component.html
@@ -46,13 +46,13 @@
 
     <div fxLayout="row">
       <div class="visualizer" fxFill>
-        <div class="outer">
+        <div class="outer" #fullScreen>
 
           <a class="follow-button" *ngIf="following" mat-icon-button (click)="follow(null)" title="Stop following">Stop following</a>
 
           <div class="controls">
             <a mat-icon-button (click)="resetView()" title="Reset view"><mat-icon>home</mat-icon></a>
-            <a mat-icon-button (click)="openFullscreen()" title="Full screen"><mat-icon>fullscreen</mat-icon></a>
+            <a mat-icon-button (click)="toggleFullscreen()" title="Full screen"><mat-icon>fullscreen</mat-icon></a>
           </div>
 
           <div class="inner" fxLayoutAlign="center center">
@@ -62,7 +62,7 @@
                 Visualization only available while the simulation is running.
               </span>
 
-              <div *ngIf="simulation.isRunning()" id="scene" (window:resize)="resize()" #fullScreen></div>
+              <div *ngIf="simulation.isRunning()" id="scene" (window:resize)="resize()"></div>
               <div fxLayout="column" class="gz3d-side-panel" *ngIf="models.length > 0">
                 <h2>Entities</h2>
                 <mat-list class="entity-list">
@@ -80,7 +80,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- <ign-simulation-actions [simulation]=simulation></ign-simulation-actions> -->
   </div>
 </div>
