--- a/src/app/admin/cloudsim/visualizer-tester/sim-visualizer-tester.component.html
+++ b/src/app/admin/cloudsim/visualizer-tester/sim-visualizer-tester.component.html
@@ -55,18 +55,19 @@
 
 <div fxLayout="row">
   <div class="visualizer" fxFill>
-    <div class="outer">
+    <div class="outer" #fullScreen>
 
       <a class="follow-button" *ngIf="following" mat-icon-button (click)="follow(null)" title="Stop following">Stop following</a>
 
       <div class="controls">
+        <a mat-icon-button (click)="toggleLights()" title="Toggle lights"><mat-icon>highlight</mat-icon></a>
         <a mat-icon-button (click)="resetView()" title="Reset view"><mat-icon>home</mat-icon></a>
-        <a mat-icon-button (click)="openFullscreen()" title="Full screen"><mat-icon>fullscreen</mat-icon></a>
+        <a mat-icon-button (click)="toggleFullscreen()" title="Full screen"><mat-icon>fullscreen</mat-icon></a>
       </div>
 
       <div class="inner" fxLayoutAlign="center center">
         <div fxLayout="row" fxLayoutAlign="center center">
-          <div id="scene" (window:resize)="resize()" #fullScreen></div>
+          <div id="scene" (window:resize)="resize()"></div>
           <div fxLayout="column" class="gz3d-side-panel" *ngIf="models.length > 0">
             <h2>Entities</h2>
             <mat-list class="entity-list">
