--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="center start" class='page-content-inner'>
   <div fxFlex.gt-xs="60%" fxFlex.lt-sm="100%">
-    <mat-tab-group dynamicHeight [selectedIndex]='selected.value'>
+    <mat-tab-group dynamicHeight [(selectedIndex)]='selected.value'>
       <mat-tab label="Account">
         <div class="tab-content">
           <div fxLayout="column" fxLayoutAlign="space-between start">
