--- a/src/app/model/review/review-model.component.html
+++ b/src/app/model/review/review-model.component.html
@@ -20,7 +20,7 @@
 
         <mat-card-content>
           <h2>What's New</h2>
-          <angular-editor [(ngModel)]="prText" [config]="editorConfig"></angular-editor>
+          <angular-editor [(ngModel)]="prComments" [config]="editorConfig"></angular-editor>
         </mat-card-content>
 
         <mat-card-actions align="end">
@@ -28,22 +28,28 @@
         </mat-card-actions>
       </mat-card>
 
-      <mat-form-field class="select-reviewer">
-        <mat-label>Reviwers</mat-label>
-        <mat-select [(ngModel)]="selectedReviewer">
-          <mat-option *ngFor="let reviewer of reviewers" [value]="reviewer">
-            {{reviewer}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+      <div class="select-reviewer">
+        <mat-form-field>
+          <mat-label>Reviwers</mat-label>
+          <mat-select  [(ngModel)]="selectedReviewers" multiple>
+            <mat-option *ngFor="let reviewer of reviewers" [value]="reviewer">
+              {{reviewer}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <div class="selected-reviewer" *ngFor="let reviewer of selectedReviewers" fxLayout="row" fxLayoutAlign="space-between">
+          <span>{{reviewer}}</span>
+          <i class="material-icons" button type="button" matSuffix (click)="deleteReviewer(reviewer)">
+            delete
+          </i>
+        </div>
+      </div>
     </div>
 
+    <h2 class="file-date">Files add on {{date}}</h2>
     <div class="file-display">
-      <div *ngFor="let file of fakeFiles" class="file" fxLayout="row" fxLayoutAlign="space-between">
+      <div *ngFor="let file of files" class="file" fxLayout="row" fxLayoutAlign="space-between">
         <span>{{file.name}}</span> 
-        <i class="material-icons" button type="button" matSuffix (click)="deleteFile(file)">
-          delete
-        </i>
       </div>
     </div>
   </div>
