initialize pull requests

--- a/src/app/model/review/review-model.component.html
+++ b/src/app/model/review/review-model.component.html
@@ -10,7 +10,7 @@
       <mat-card>{{fakeBranch}}</mat-card>
     </mat-toolbar>
 
-    <div class="pull-request-group">
+    <div class="review-group">
       <mat-card>
         <mat-card-title>
           <div class="content">
