remove file-change component first

--- a/src/app/pull-request/pull-request.component.html
+++ b/src/app/pull-request/pull-request.component.html
@@ -16,7 +16,7 @@
           [review]="review"></ign-conversation>
         </mat-tab>
         <mat-tab label="File Changes">
-          <ign-file-changes></ign-file-changes>
+          Coming soon!
         </mat-tab>
         <mat-tab label="3D Changes">Coming soon!</mat-tab>
       </mat-tab-group>
