--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
           <a mat-list-item routerLink="/portal" (click)="closeSidenav()">
             Portals
           </a>
-          <a mat-list-item href="https://openrobotics.freshdesk.com" (click)="closeSidenav()">
+          <a mat-list-item routerLink="/information" (click)="closeSidenav()">
             Information
           </a>
           <!-- Add link to System Admin page if the user is a system admin -->
