--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,8 +26,9 @@
           <a mat-list-item routerLink="/collections" (click)="closeSidenav()">
             <mat-icon>collections</mat-icon> Collections
           </a>
-          <a mat-list-item routerLink="/portal" (click)="closeSidenav()">
-            Portals
+          <mat-divider></mat-divider>
+          <a mat-list-item routerLink="/visualization" (click)="closeSidenav()">
+            Visualization
           </a>
           <a mat-list-item href="https://openrobotics.freshdesk.com" (click)="closeSidenav()">
             Information
