--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,6 +42,10 @@ mat-sidenav .copyright {
   margin-bottom: 20px;
   color: #fefefe;
 }
+mat-sidenav mat-divider {
+  border-top-color: #fefefe;
+  margin: 10px;
+}
 
 .sidenav-list a.mat-list-item {
   color:#fefefe;
