--- a/src/app/world/world.component.html
+++ b/src/app/world/world.component.html
@@ -64,6 +64,10 @@
             (click)="downloadClick()">
             <mat-icon>file_download</mat-icon>
           </button>
+          <button mat-icon-button title="Copy world URL to clipboard."
+            (click)="copyWorldURL()">
+            <mat-icon>code</mat-icon>
+          </button>
           <button mat-icon-button
             [disabled]="!authService.isAuthenticated() || currentVersion != latestVersion"
             [title]="getCopyButtonTitle()"
