fix month retrieval for conversation date

--- a/src/app/pull-request/pull-request.component.html
+++ b/src/app/pull-request/pull-request.component.html
@@ -23,7 +23,7 @@
 
       <div class="select-reviewer">
         <mat-form-field>
-          <mat-label>Reviwers</mat-label>
+          <mat-label>Reviewers</mat-label>
           <mat-select  [(ngModel)]="selectedReviewers" multiple>
             <mat-option *ngFor="let reviewer of reviewers" [value]="reviewer">
               {{reviewer}}
