--- a/src/app/model/edit/edit-model.component.html
+++ b/src/app/model/edit/edit-model.component.html
@@ -51,6 +51,10 @@
                 fxFill>
       </ign-metadata>
 
+      <h2>Thumbnails</h2>
+
+      <ign-thumbnail-generator [resource]="model"></ign-thumbnail-generator>
+
       <h2>Replace files</h2>
 
       <ign-file-upload (files)="onReceiveFiles($event)"
