correct errors for models under review

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -25,7 +25,7 @@
       <ng-template mat-tab-label>
         <div fxLayout="row" fxLayoutAlign="start center">
           <mat-icon svgIcon="ign-model"></mat-icon>
-          <span>Models under Review ({{paginatedModels?.totalCount}})</span>
+          <span>Models under Review ({{paginatedUnderReviewModels?.totalCount}})</span>
         </div>
       </ng-template>
 
