--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,6 +79,11 @@
             routerLinkActive="active">World</button>
         </mat-menu>
 
+        <!-- Notifications button -->
+        <button class="add-button" mat-icon-button title="Notifications" routerLink="/notifications" routerLinkActive="active">
+          <mat-icon>notifications</mat-icon>
+        </button>
+
         <!-- Login/logout and other user options -->
         <button mat-icon-button [matMenuTriggerFor]="userMenu">
           <mat-icon *ngIf="!authService.isAuthenticated(); else personIcon" id="profile-icon">
