Edit World Metadata

--- a/src/app/world/edit/edit-world.component.html
+++ b/src/app/world/edit/edit-world.component.html
@@ -36,6 +36,15 @@
         </mat-radio-group>
       </div>
 
+      <h2>Metadata</h2>
+
+      <ign-metadata [metadata]="world.metadata"
+                    [edit]="true"
+                    [disabled]="updating"
+                    (onModify)="onModifyMetadata()"
+                    fxFill>
+      </ign-metadata>
+
       <h2>Replace files</h2>
 
       <ign-file-upload (files)="onReceiveFiles($event)"
