--- a/src/app/pull-request/pull-request.component.html
+++ b/src/app/pull-request/pull-request.component.html
@@ -1,7 +1,7 @@
 <div class="pull-request">
   <div class="content">
     <mat-toolbar>
-      <mat-icon style="transform: rotate(90deg)">repeat</mat-icon>
+      <mat-icon class="repeat-icon">repeat</mat-icon>
       <span class="heading">{{review.title}}</span>
     </mat-toolbar>
 
