--- a/src/app/model/review/review.component.html
+++ b/src/app/model/review/review.component.html
@@ -4,7 +4,7 @@
     <p>A model review compares changes across two branches</p>
 
     <mat-toolbar>
-      <mat-icon style="transform: rotate(90deg)">repeat</mat-icon>
+      <mat-icon class="repeat-icon">repeat</mat-icon>
       <mat-card>{{fakeBranch}}</mat-card>
       <mat-icon>keyboard_backspace</mat-icon>
       <mat-card>{{fakeBranch}}</mat-card>
@@ -20,7 +20,11 @@
 
         <mat-card-content>
           <h2>What's New</h2>
-          <angular-editor [(ngModel)]="description" [config]="editorConfig"></angular-editor>
+          <ign-description 
+          [edit]="true" 
+          [description]="description" 
+          (onModify)="onModifyDescription($event)"
+          fxFill></ign-description>
         </mat-card-content>
 
         <mat-card-actions align="end">
@@ -30,7 +34,7 @@
 
       <div class="select-reviewer">
         <mat-form-field>
-          <mat-label>Reviwers</mat-label>
+          <mat-label>Reviewers</mat-label>
           <mat-select  [(ngModel)]="selectedReviewers" multiple>
             <mat-option *ngFor="let reviewer of reviewers" [value]="reviewer">
               {{reviewer}}
