--- a/src/app/pull-request/pull-request.component.scss
+++ b/src/app/pull-request/pull-request.component.scss
@@ -4,9 +4,15 @@
 .content {
   padding: 20px 40px;
 }
+
+.repeat-icon {
+  transform: rotate(90deg);
+}
+
 .heading {
   margin-left: 1em;
 }
+
 .display {
   display: flex;
   .mat-tab-group {
@@ -21,24 +27,31 @@
     }
   }
 }
+
 .selected-reviewer:hover {
   background-color: mat-color($custom-theme-accent, A100);
 }
+
 .selected-reviewer {
   padding: 0.5em;
 }
+
 .selected-reviewer i {
   cursor: pointer;
 }
+
 .selected-reviewer .delete:hover {
   color: mat-color($custom-theme-accent, A700);
 }
+
 .selected-reviewer .check_circle {
   color: #29a329;
 }
+
 .mat-divider {
   margin: 1rem 0;
 }
+
 .done {
   color: #29a329;
 }
