unit tests, formatting and linting

--- a/src/app/pull-request/pull-request.component.html
+++ b/src/app/pull-request/pull-request.component.html
@@ -9,7 +9,7 @@
       <mat-tab-group mat-align-tabs="center" animationDuration="0ms" mat-stretch-tabs>
         <mat-tab label="Conversation">
           <ign-conversation
-          [files]="fakeFiles"
+          [files]="files"
           [user]="user"
           [modelName]="modelName"
           [prId]="prId"
