--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -133,12 +133,23 @@
           <p>
           Try out these experimental features, and <a href="https://openrobotics.freshdesk.com/support/home">let us know what you think</a>. Remember, these are experimental features and may change, break or disappear at any time.
           </p>
+          <div>
           <mat-slide-toggle
             color="primary"
             [checked]="experimentalGzWeb"
             (change)="onToggleGzWebFeature($event)">
           </mat-slide-toggle>
           <span>Enable <a href="http://gazebosim.org/gzweb" target="_blank">GzWeb</a> for model visualization during model upload.</span>
+          </div>
+          <div>
+            <mat-slide-toggle
+              color="primary"
+              [checked]="notifications"
+              (change)="onToggleNotifications($event)">
+
+            </mat-slide-toggle>
+            <span>Enable Notifications</span>
+          </div>
         </div>
       </mat-tab>
     </mat-tab-group>
