World thumbnails generator

--- a/src/app/world/edit/edit-world.component.html
+++ b/src/app/world/edit/edit-world.component.html
@@ -45,6 +45,10 @@
                     fxFill>
       </ign-metadata>
 
+      <h2>Thumbnails</h2>
+
+      <ign-thumbnail-generator [resource]="world"></ign-thumbnail-generator>
+
       <h2>Replace files</h2>
 
       <ign-file-upload (files)="onReceiveFiles($event)"
